@@ -554,7 +554,9 @@ int rt_task_yield (void)
  * place.
 
  * @param period The period of the task, expressed in clock ticks (see
- * note).
+ * note). Passing TM_INFINITE attempts to stop the task's periodic
+ * timer; in the latter case, the routine always exits succesfully,
+ * regardless of the pervious state of this timer.
  *
  * @return 0 is returned upon success. Otherwise:
  *
